# dcli

./: .clog.toml  .gitignore  Cargo.toml  Pipfile  README.md  build.py  changelog.md  example.sql  history.txt  plan.toml
.github/workflows/: build_release_static.yml  rust.yml
assets/: index.html  script.js  style.css
assets_old/: gridjs.min.js  index.html  old.html  script.js
i18n/en-US/: dcli.ftl
i18n/zh-CN/: dcli.ftl
src/: cli.rs  config.rs  extend.pest  main.rs  mysql.rs  output.rs  parser.rs  query.rs  utils.rs
src/cli/: http.rs  mod.rs  shell.rs
src/cli/http/: mod.rs
src/cli/http/assets/: index.html  style.css
src/cli/shell/: helper.rs  highlight.rs  mod.rs
src/mysql/: constants.rs  mod.rs
