[package]
name = "dcli"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
shellexpand = "2.0.0"
comfy-table = "1.3.0"
anyhow = "1.0.34"
sqlx = { version = "0.4.1", features = ["runtime-tokio-rustls", "mysql", "all-types"] }
tokio = { version = "0.2.23", features = ["full"] }
serde_json = "*"
pretty_env_logger = "*"
