[package]
name = "dcli"
version = "0.0.1"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
description = "MySQL 数据库连接管理工具"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.7"
shellexpand = "2.0.0"
comfy-table = "1.4.2"
anyhow = "1.0.34"
sqlx = { version = "0.4.1", features = ["runtime-tokio-rustls", "mysql", "all-types"] }
tokio = { version = "0.2.23", features = ["full"] }
serde_json = "1.0.60"
log4rs = "1.0.0-alpha-2"
log = "0.4.11"

sqlparser = "0.6.1"
rustyline = { version = "7.0.0", features = ["with-fuzzy"] }
rustyline-derive = "0.4.0"
colored = "2"
