[package]
name = "dcli"
version = "0.0.6"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
description = "MySQL 数据库连接管理工具 | MySQL connection manage tool"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/PrivateRookie/dcli"
repository = "https://github.com/PrivateRookie/dcli"
keywords = ["cli", "database", "mysql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["en-US"]
en-US = []
zh-CN = []

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_yaml = "0.8.14"
serde-pickle = "0.6.2"
toml = "0.5.7"
csv = "1.1"
comfy-table = "1.4.2"
anyhow = "1.0.34"
sqlx = { version = "0.4.2", features = ["runtime-tokio-rustls", "mysql", "all-types", "bigdecimal"] }
chrono = "0.4.19"
base64 = "0.13.0"
bigdecimal = "0.2.0"
tokio = { version = "0.2.23", features = ["full"] }
log4rs = "1.0.0-alpha-2"
log = "0.4.11"

sqlparser = "0.6.1"
rustyline = { version = "7.1.0", features = ["with-fuzzy"] }
rustyline-derive = "0.4.0"
colored = "2"
i18n-embed = { version = "0.9.4", features = ["fluent-system", "desktop-requester"] }
rust-embed = "5"
i18n-embed-fl = "0.2.0"
once_cell = "1.5.2"
warp = "0.2.5"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"